--- a/templates/index.html
+++ b/templates/index.html
@@ -136,17 +136,23 @@
           <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
             <li class="active treeview">
-              <a href="#">
+              <a href="/">
                 <i class="fa fa-dashboard"></i> <span>Dashboard</span> 
               </a>
               
             </li>
-          <li>
+ <li class="treeview">
               <a href="#">
-                <i class="fa fa-th"></i> <span>Profile</span> 
+                <i class="fa fa-th"></i>
+                <span>Profile</span>
+                <i class="fa fa-angle-left pull-right"></i>
               </a>
-            </li>
-          
+              <ul class="treeview-menu">
+                <li><a href="/editprofile"><i class="fa fa-circle-o"></i> Edit</a></li>
+                <li><a href="/profile"><i class="fa fa-circle-o"></i> View</a></li>
+        </ul>
+        </li>
+
          
             <li class="treeview">
               <a href="#">
@@ -155,21 +161,16 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
-                <li><a href="pages/UI/general.html"><i class="fa fa-circle-o"></i> Create</a></li>
-                <li><a href="pages/UI/icons.html"><i class="fa fa-circle-o"></i> View</a></li>
-				<li><a href="pages/UI/icons.html"><i class="fa fa-circle-o"></i> Enrolled</a></li>
+                <li><a href="/eventcreation"><i class="fa fa-circle-o"></i> Create</a></li>
+                <li><a href="/viewevents"><i class="fa fa-circle-o"></i> View</a></li>
+				
                 
               </ul>
             </li>
+            
             <li>
-              <a href="pages/calendar.html">
-                <i class="fa fa-calendar"></i> <span>Calendar</span>
-                <small class="label pull-right bg-red">3</small>
-              </a>
-            </li>
-            <li>
-              <a href="pages/mailbox/mailbox.html">
-                <i class="fa fa-envelope"></i> <span>Mailbox</span>
+              <a href="/questions">
+                <i class="fa fa-envelope"></i> <span>Questions</span>
                 <small class="label pull-right bg-yellow">12</small>
               </a>
             </li>
