--- a/templates/viewpro.html
+++ b/templates/viewpro.html
@@ -119,20 +119,29 @@
           </form>
           <!-- /.search form -->
           <!-- sidebar menu: : style can be found in sidebar.less -->
-          <ul class="sidebar-menu">
+         <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
-            <li>
-              <a href="#">
+            <li >
+              <a href="/">
                 <i class="fa fa-dashboard"></i> <span>Dashboard</span> 
               </a>
-              
-            </li>
-          <li class="active treeview">
+              </li>
+            
+ <li class="treeview">
+            <li class="active treeview">
               <a href="#">
-                <i class="fa fa-th"></i> <span>Profile</span> 
+            
+                <i class="fa fa-th"></i>
+                <span>Pro</span>
+                <i class="fa fa-angle-left pull-right"></i>
               </a>
-            </li>
-          
+              <ul class="treeview-menu">
+                <li><a href="/editprofile"><i class="fa fa-circle-o"></i> Edit</a></li>
+                <li><a href="/profile"><i class="fa fa-circle-o"></i> View</a></li>
+                </ul>
+        </li>
+        </li>
+
          
             <li class="treeview">
               <a href="#">
@@ -141,25 +150,20 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
-                <li><a href="pages/UI/general.html"><i class="fa fa-circle-o"></i> Create</a></li>
-                <li><a href="pages/UI/icons.html"><i class="fa fa-circle-o"></i> View</a></li>
-				<li><a href="pages/UI/icons.html"><i class="fa fa-circle-o"></i> Enrolled</a></li>
+                <li><a href="/eventcreation"><i class="fa fa-circle-o"></i> Create</a></li>
+                <li><a href="/viewevents"><i class="fa fa-circle-o"></i> View</a></li>
+        
                 
               </ul>
             </li>
+            
             <li>
-              <a href="pages/calendar.html">
-                <i class="fa fa-calendar"></i> <span>Calendar</span>
-                <small class="label pull-right bg-red">3</small>
-              </a>
-            </li>
-            <li>
-              <a href="pages/mailbox/mailbox.html">
-                <i class="fa fa-envelope"></i> <span>Mailbox</span>
+              <a href="/questions">
+                <i class="fa fa-envelope"></i> <span>Questions</span>
                 <small class="label pull-right bg-yellow">12</small>
               </a>
-            </li>
-            
+            </li>     
+         
         <!-- /.sidebar -->
       </aside>
       <!-- Content Wrapper. Contains page content 22 -->
@@ -253,8 +257,10 @@
                     </div>
           <div class="form-group">
                       <label for="inputEmail3" class="col-sm-2 control-label">Birth Date</label>
-                      <div class="col-sm-10">
-            <label for="inputEmail3" class="col-sm-1 control-label">DOB</label>
+                      
+			<div class="col-sm-10">
+                        <label for="inputEmail3" class="col-sm-1 control-label">{{ current_user.date }}</label>
+                      
                       </div>
                     </div>
                    <div class="form-group">
