--- a/templates/editpro.html
+++ b/templates/editpro.html
@@ -177,8 +177,7 @@
         </li>
         </li>
 
-         
-            <li class="treeview">
+               <li class="treeview">
               <a href="#">
                 <i class="fa fa-edit"></i>
                 <span>Events</span>
@@ -186,18 +185,11 @@
               </a>
               <ul class="treeview-menu">
                 <li><a href="/eventcreation"><i class="fa fa-circle-o"></i> Create</a></li>
-                <li><a href="/viewevents"><i class="fa fa-circle-o"></i> View</a></li>
+                <li><a href="/listevents"><i class="fa fa-circle-o"></i> List</a></li>
         
                 
               </ul>
-            </li>
-            
-            <li>
-              <a href="/questions">
-                <i class="fa fa-envelope"></i> <span>Questions</span>
-                <small class="label pull-right bg-yellow">12</small>
-              </a>
-            </li>     
+            </li> 
         <!-- /.sidebar -->
       </aside>
       <!-- Content Wrapper. Contains page content 22 -->
