--- a/templates/eventcreation.html
+++ b/templates/eventcreation.html
@@ -76,7 +76,7 @@
       <header class="main-header">
         <!-- Logo -->
         
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>E</b>M</span>
           <!-- logo for regular state and mobile devices -->
@@ -172,8 +172,7 @@
         </ul>
         </li>
 
-         
-            <li class="active treeview">
+               <li class="treeview">
               <a href="#">
                 <i class="fa fa-edit"></i>
                 <span>Events</span>
@@ -181,17 +180,10 @@
               </a>
               <ul class="treeview-menu">
                 <li><a href="/eventcreation"><i class="fa fa-circle-o"></i> Create</a></li>
-                <li><a href="/viewevents"><i class="fa fa-circle-o"></i> View</a></li>
+                <li><a href="/listevents"><i class="fa fa-circle-o"></i> List</a></li>
         
                 
               </ul>
-            </li>
-            
-            <li>
-              <a href="/questions">
-                <i class="fa fa-envelope"></i> <span>Questions</span>
-                <small class="label pull-right bg-yellow">12</small>
-              </a>
             </li>
             
         <!-- /.sidebar -->
