--- a/templates/file.html
+++ b/templates/file.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EventMate | Question</title>
+    <title>EventMate | Dashboard</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -43,7 +43,7 @@
       <header class="main-header">
         <!-- Logo -->
         
-        <a href="/" class="logo">
+        <a href="index.html" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>E</b>M</span>
           <!-- logo for regular state and mobile devices -->
@@ -61,7 +61,8 @@
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
               <!-- Messages: style can be found in dropdown.less-->
-              
+
+              {% if current_user.is_authenticated %}
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -81,7 +82,7 @@
                   <!-- Menu Footer-->
                   <li class="user-footer">
                     <div class="pull-left">
-                      <a href="{{ url_for('profile') }}" class="btn btn-default btn-flat">Profile</a>
+                      <a href="#" class="btn btn-default btn-flat">Profile</a>
                     </div>
                     <div class="pull-right">
                       <a href="{{ url_for('logout') }}" class="btn btn-default btn-flat">Sign out</a>
@@ -89,7 +90,20 @@
                   </li>
                 </ul>
               </li>
-             
+              {% else %}   
+              <li class="dropdown user user-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <span class="hidden-xs">Login</span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li class="user-footer">
+                    <a href="{{ url_for('oauth_authorize', provider='facebook') }}" class="btn btn-default btn-flat">Facebook</a>
+                    <a href="{{ url_for('oauth_authorize', provider='twitter') }}" class="btn btn-default btn-flat">Twitter</a>
+                  </li>
+                </ul>
+              </li>
+              {% endif %}  
+
             </ul>
           </div>
         </nav>
@@ -121,19 +135,26 @@
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
-            <li>
-              <a href="#">
+            <li class="active treeview">
+              <a href="/">
                 <i class="fa fa-dashboard"></i> <span>Dashboard</span> 
               </a>
               
             </li>
-          <li class="active treeview">
+ <li class="treeview">
               <a href="#">
-                <i class="fa fa-th"></i> <span>Profile</span> 
+                <i class="fa fa-th"></i>
+                <span>Profile</span>
+                <i class="fa fa-angle-left pull-right"></i>
               </a>
-            </li>
-          
-             <li class="treeview">
+              <ul class="treeview-menu">
+                <li><a href="/editprofile"><i class="fa fa-circle-o"></i> Edit</a></li>
+                <li><a href="/profile"><i class="fa fa-circle-o"></i> View</a></li>
+        </ul>
+        </li>
+
+         
+              <li class="treeview">
               <a href="#">
                 <i class="fa fa-edit"></i>
                 <span>Events</span>
@@ -146,13 +167,13 @@
                 
               </ul>
             </li>
+            
         <!-- /.sidebar -->
       </aside>
       <!-- Content Wrapper. Contains page content 22 -->
       
-     <div class="content-wrapper ">
+      <div class="content-wrapper ">
         <!-- Content Header (Page header) -->
-        
         {% if current_user.is_authenticated %}
         <!-- Main content -->
           <section class="content">
@@ -162,7 +183,7 @@
                 <!-- small box -->
                 <div class="small-box bg-aqua">
                   <div class="inner">
-                    <h3>150</h3>
+                    <h3>8</h3>
                     <p>Events</p>
                   </div>
                   <div class="icon">
@@ -213,54 +234,38 @@
             </div><!-- /.row -->
           {% endif %}  
           <!-- Main row -->
-
+         
     <div class="row">   
       <div class="col-md-6">
               <!-- Horizontal Form -->
               <div class="box box-info">
                 <div class="box-header with-border">
-                  <h3 class="box-title">Question</h3>
+                  <h3 class="box-title">List Events</h3>
                 </div><!-- /.box-header -->
                 <!-- form start -->
-
-                <form class="form-horizontal" name="questions" method="POST">
-                  <div class="box-body">
-                    <div class="form-group">
-                      <label class="col-sm-2 control-label">Question ?</label>
-                      <div class="col-sm-10">
-                        <input class="form-control" placeholder="Enter Your Question" type="text" name="ques" required>
-                      </div>
-                    </div>
-                    
-                  <div class="box-footer">
-                    <button type="submit" class="btn btn-default">Cancel</button>
-                    <button type="submit" class="btn btn-info pull-right">Save</button>
-                  </div><!-- /.box-footer -->
-          
-<div class="col-md-8">
-          <div class="box">
-            <div class="box-header with-border">
-              <h3 class="box-title">Question Pool</h3>
-            </div>
-            <!-- /.box-header -->
+               <form class="form-horizontal" name="file" method="POST" enctype=multipart/form-data>
+                      <!-- /.box-header -->
             <div class="box-body">
               <table class="table table-bordered">
                 <tbody><tr>
                   <th style="width: 10px">#</th>
-                  <th>Questions</th>
-                  <th>Frequency Ranking</th>
-                                  </tr>
+                  <th>Event</th>
+                                                    </tr>
                 <tr>
                 {%set i=1%}
-                  {% for sample in Question %}
+                  {% for sample in Event %}
                          <tr>
-                        <td>{{i}}{%set i=i+1%}</td>
-                         <td>{{sample.content}}</td><td>{{sample.frequency}}</td></tr>
+                        <td>{{i}}{% set i=i+1 %}</td>
+                         <td><a href="{{ url_for('viewevent', eventid= sample.id)}}">{{sample.title}}</a></td></tr>
                         {% endfor %}
                 
                 </tr>
+
+
                 
               </tbody></table>
+              <input type=file name=file>
+         <input type=submit value=Upload>
               </td></div>
             </div>
             <!-- /.box-body -->
@@ -272,11 +277,9 @@
                                 </form>
               </div>
       </div><!-- /.row (main row) -->
-        </section>
- 
-      
-    </div><!-- /.content-wrapper -->
 
+
+        </section><!-- /.content -->
 
       </div><!-- /.content-wrapper -->
       <footer class="main-footer">
