--- a/templates/listevents.html
+++ b/templates/listevents.html
@@ -73,7 +73,7 @@
       <header class="main-header">
         <!-- Logo -->
         
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>E</b>M</span>
           <!-- logo for regular state and mobile devices -->
