--- a/templates/viewevent.html
+++ b/templates/viewevent.html
@@ -12,51 +12,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>EventMate | View Event</title>
     <!-- Tell the browser to be responsive to screen width -->
-    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
       
-    <link rel="stylesheet" href="static/select2.css">
+    <link rel="stylesheet" href="../static/select2.css">
 
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="static/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="../static/dist/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="static/dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="../static/dist/css/skins/_all-skins.min.css">
     <!-- iCheck -->
-    <link rel="stylesheet" href="static/plugins/iCheck/flat/blue.css">
+    <link rel="stylesheet" href="../static/plugins/iCheck/flat/blue.css">
      <!-- bootstrap datepicker -->
-  <link rel="stylesheet" href="static/plugins/datepicker/datepicker3.css">
+  <link rel="stylesheet" href="../static/plugins/datepicker/datepicker3.css">
     <!-- Morris chart -->
-    <link rel="stylesheet" href="static/plugins/morris/morris.css">
+    <link rel="stylesheet" href="../static/plugins/morris/morris.css">
     <!-- jvectormap -->
     <!-- Tell the browser to be responsive to screen width -->
   
   <!-- Bootstrap 3.3.6 -->
-  <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <!-- daterange picker -->
-  <link rel="stylesheet" href="static/plugins/daterangepicker/daterangepicker-bs3.css">
+  <link rel="stylesheet" href="../static/plugins/daterangepicker/daterangepicker-bs3.css">
   <!-- bootstrap datepicker -->
-  <link rel="stylesheet" href="static/plugins/datepicker/datepicker3.css">
+  <link rel="stylesheet" href="../static/plugins/datepicker/datepicker3.css">
   <!-- iCheck for checkboxes and radio inputs -->
-  <link rel="stylesheet" href="static/plugins/iCheck/all.css">
+  <link rel="stylesheet" href="../static/plugins/iCheck/all.css">
   <!-- Bootstrap Color Picker -->
-  <link rel="stylesheet" href="static/plugins/colorpicker/bootstrap-colorpicker.min.css">
+  <link rel="stylesheet" href="../static/plugins/colorpicker/bootstrap-colorpicker.min.css">
   <!-- Bootstrap time Picker -->
-  <link rel="stylesheet" href="static/plugins/timepicker/bootstrap-timepicker.min.css">
+  <link rel="stylesheet" href="../static/plugins/timepicker/bootstrap-timepicker.min.css">
   <!-- Select2 -->
-  <link rel="stylesheet" href="static/plugins/select2/select2.min.css">
+  <link rel="stylesheet" href="../static/plugins/select2/select2.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="static/dist/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="../static/dist/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="static/dist/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="../static/dist/css/skins/_all-skins.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -65,7 +65,7 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
     <!-- bootstrap wysihtml5 - text editor -->
-    <link rel="stylesheet" href="static/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <link rel="stylesheet" href="../static/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -80,7 +80,7 @@
       <header class="main-header">
         <!-- Logo -->
         
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>E</b>M</span>
           <!-- logo for regular state and mobile devices -->
@@ -102,7 +102,7 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="static/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <img src="../static/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span class="hidden-xs">{{ current_user.nickname }}</span>
                 </a>
                 <ul class="dropdown-menu">
@@ -279,7 +279,9 @@
                 <div class="box-header with-border">
 					
 
-                <img src="/static/images/1.jpeg" height="500px" width="1550px"/>
+                <img src="{{ event.img }}" height="500px" width="1550px"/>
+                 <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-8 control-label"><a href="{{event.img}}">Link To File</a></label></div>
 
 </div>
 </div>		</div></div>
@@ -335,13 +337,7 @@
                       </div> 
                     
                     
-                      <div style="text-align:center">
-                   <div class="toggle-button">
-
-    <button type="submit" value="{{ event.status }}" name="toggle"></button>
-</div><div style="text-align:center" class=""> 
-                   <label for="inputEmail3" class="col-sm-6.5 control-label">Activate Q&A</label><br></br>
-                 </div>        </div>
+                      
                   </div><!-- /.box-body -->
                     
 
@@ -354,7 +350,7 @@
               </div>
       
       </div>
-	  {% if event.status == 1 %}
+	  
       <div class="col-md-8">
               <!-- Horizontal Form -->
               <div class="box box-info">
@@ -412,8 +408,7 @@
                                 </form>
               </div>
       </div><!-- /.row (main row) -->
-	  {% else %}
-	  {% endif %}
+	 
 
 
      </section>
@@ -433,7 +428,7 @@
         </div>
         <strong>Copyright &copy; 2015-2016 <a href="http://eventmate.com">EVENTMATE</a>.</strong> All rights reserved.
       </footer>
-<script src="static/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+<script src="../static/plugins/jQuery/jQuery-2.1.4.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
     <script>
       $.widget.bridge('uibutton', $.ui.button);
@@ -441,37 +436,37 @@
     <!--
     
 <!-- jQuery 2.2.0 -->
-<script src="static/plugins/jQuery/jQuery-2.2.0.min.js"></script>
+<script src="../static/plugins/jQuery/jQuery-2.2.0.min.js"></script>
 <!-- Bootstrap 3.3.6 -->
-<script src="static/bootstrap/js/bootstrap.min.js"></script>
+<script src="../static/bootstrap/js/bootstrap.min.js"></script>
 <!-- Select2 -->
-<script src="static/plugins/select2/select2.full.min.js"></script>
+<script src="../static/plugins/select2/select2.full.min.js"></script>
 <!-- InputMask -->
-<script src="static/plugins/input-mask/jquery.inputmask.js"></script>
-<script src="static/plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
-<script src="static/plugins/input-mask/jquery.inputmask.extensions.js"></script>
+<script src="../static/plugins/input-mask/jquery.inputmask.js"></script>
+<script src="../static/plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
+<script src="../static/plugins/input-mask/jquery.inputmask.extensions.js"></script>
 <!-- date-range-picker -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
-<script src="static/plugins/daterangepicker/daterangepicker.js"></script>
+<script src="../static/plugins/daterangepicker/daterangepicker.js"></script>
 <!-- bootstrap datepicker -->
-<script src="static/plugins/datepicker/bootstrap-datepicker.js"></script>
+<script src="../static/plugins/datepicker/bootstrap-datepicker.js"></script>
 <!-- bootstrap color picker -->
-<script src="static/plugins/colorpicker/bootstrap-colorpicker.min.js"></script>
+<script src="../static/plugins/colorpicker/bootstrap-colorpicker.min.js"></script>
 <!-- bootstrap time picker -->
-<script src="static/plugins/timepicker/bootstrap-timepicker.min.js"></script>
+<script src="../static/plugins/timepicker/bootstrap-timepicker.min.js"></script>
 <!-- SlimScroll 1.3.0 -->
-<script src="static/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+<script src="../static/plugins/slimScroll/jquery.slimscroll.min.js"></script>
 <!-- iCheck 1.0.1 -->
-<script src="static/plugins/iCheck/icheck.min.js"></script>
+<script src="../static/plugins/iCheck/icheck.min.js"></script>
 <!-- FastClick -->
-<script src="static/plugins/fastclick/fastclick.js"></script>
+<script src="../static/plugins/fastclick/fastclick.js"></script>
 <!-- AdminLTE App -->
-<script src="static/dist/js/app.min.js"></script>
+<script src="../static/dist/js/app.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="static/dist/js/demo.js"></script>
+<script src="../static/dist/js/demo.js"></script>
 <!-- Page script -->
 
-    <script src="static/select2.js"></script>
+    <script src="../static/select2.js"></script>
     
 <script>
   
