--- a/templates/viewpro.html
+++ b/templates/viewpro.html
@@ -43,7 +43,7 @@
       <header class="main-header">
         <!-- Logo -->
         
-        <a href="index.html" class="logo">
+        <a href="" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>E</b>M</span>
           <!-- logo for regular state and mobile devices -->
@@ -143,26 +143,18 @@
         </li>
 
          
-            <li class="treeview">
-              <a href="#">
+          <a href="#">
                 <i class="fa fa-edit"></i>
                 <span>Events</span>
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
                 <li><a href="/eventcreation"><i class="fa fa-circle-o"></i> Create</a></li>
-                <li><a href="/viewevents"><i class="fa fa-circle-o"></i> View</a></li>
+                <li><a href="/listevents"><i class="fa fa-circle-o"></i> List</a></li>
         
                 
               </ul>
-            </li>
-            
-            <li>
-              <a href="/questions">
-                <i class="fa fa-envelope"></i> <span>Questions</span>
-                <small class="label pull-right bg-yellow">12</small>
-              </a>
-            </li>     
+            </li>  
          
         <!-- /.sidebar -->
       </aside>
@@ -284,12 +276,7 @@
                       </div>
                     </div>
           
-          <div class="form-group">
-                      <label for="inputEmail3" class="col-sm-2 control-label">Skills</label>
-                      <div class="col-sm-10">
-                        <label for="inputEmail3" class="col-sm-1 control-label">Skills</label>
-                      </div>
-                    </div>
+          
           
                   </div><!-- /.box-body -->
                   <div class="box-footer">
