--- a/templates/file.html
+++ b/templates/file.html
@@ -7,28 +7,28 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
-    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="static/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="../static/dist/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="static/dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="../static/dist/css/skins/_all-skins.min.css">
     <!-- iCheck -->
-    <link rel="stylesheet" href="static/plugins/iCheck/flat/blue.css">
+    <link rel="stylesheet" href="../static/plugins/iCheck/flat/blue.css">
     <!-- Morris chart -->
-    <link rel="stylesheet" href="static/plugins/morris/morris.css">
+    <link rel="stylesheet" href="../static/plugins/morris/morris.css">
     <!-- jvectormap -->
-    <link rel="stylesheet" href="static/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
+    <link rel="stylesheet" href="../static/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
     <!-- Date Picker -->
-    <link rel="stylesheet" href="static/plugins/datepicker/datepicker3.css">
+    <link rel="stylesheet" href="../static/plugins/datepicker/datepicker3.css">
     <!-- Daterange picker -->
-    <link rel="stylesheet" href="static/plugins/daterangepicker/daterangepicker-bs3.css">
+    <link rel="stylesheet" href="../static/plugins/daterangepicker/daterangepicker-bs3.css">
     <!-- bootstrap wysihtml5 - text editor -->
-    <link rel="stylesheet" href="static/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <link rel="stylesheet" href="../static/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -66,13 +66,13 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="static/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <img src="../static/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span class="hidden-xs">{{ current_user.nickname }}</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="../static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
                       {{ current_user.nickname }} - Web Developer
                     </p>
@@ -115,7 +115,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="../static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
               <p>{{ current_user.nickname }}</p>
@@ -264,9 +264,11 @@
 
                 
               </tbody></table>
-              <input type=file name=file>
+              
+              </td>
+              </div>
+            <input type=file name=file>
          <input type=submit value=Upload>
-              </td></div>
             </div>
             <!-- /.box-body -->
             
@@ -289,7 +291,7 @@
         <strong>Copyright &copy; 2015-2016 <a href="http://eventmate.com">EVENTMATE</a>.</strong> All rights reserved.
       </footer>
     <!-- jQuery 2.1.4 -->
-    <script src="static/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+    <script src="../static/plugins/jQuery/jQuery-2.1.4.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
@@ -297,33 +299,33 @@
       $.widget.bridge('uibutton', $.ui.button);
     </script>
     <!-- Bootstrap 3.3.5 -->
-    <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
     <!-- Morris.js charts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-    <script src="static/plugins/morris/morris.min.js"></script>
+    <script src="../static/plugins/morris/morris.min.js"></script>
     <!-- Sparkline -->
-    <script src="static/plugins/sparkline/jquery.sparkline.min.js"></script>
+    <script src="../static/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!-- jvectormap -->
-    <script src="static/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="static/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="../static/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+    <script src="../static/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
     <!-- jQuery Knob Chart -->
-    <script src="static/plugins/knob/jquery.knob.js"></script>
+    <script src="../static/plugins/knob/jquery.knob.js"></script>
     <!-- daterangepicker -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js"></script>
-    <script src="static/plugins/daterangepicker/daterangepicker.js"></script>
+    <script src="../static/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- datepicker -->
-    <script src="static/plugins/datepicker/bootstrap-datepicker.js"></script>
+    <script src="../static/plugins/datepicker/bootstrap-datepicker.js"></script>
     <!-- Bootstrap WYSIHTML5 -->
-    <script src="static/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+    <script src="../static/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
     <!-- Slimscroll -->
-    <script src="static/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+    <script src="../static/plugins/slimScroll/jquery.slimscroll.min.js"></script>
     <!-- FastClick -->
-    <script src="static/plugins/fastclick/fastclick.min.js"></script>
+    <script src="../static/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="static/dist/js/app.min.js"></script>
+    <script src="../static/dist/js/app.min.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="static/dist/js/pages/dashboard.js"></script>
+    <script src="../static/dist/js/pages/dashboard.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="static/dist/js/demo.js"></script>
+    <script src="../static/dist/js/demo.js"></script>
   </body>
 </html>
